@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-<comment>Copyright (C) 2012 Robert Chéramy (robert@cheramy.net)
+ <comment>Copyright (C) 2012 Robert Chéramy (robert@cheramy.net)
 
 This file is part of YASW (Yet Another Scan Wizard).
 
@@ -17,15 +17,33 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with YASW.  If not, see http://www.gnu.org/licenses/.
 </comment>
-<class>ImageTableWidget</class>
+ <class>ImageTableWidget</class>
  <widget class="QWidget" name="ImageTableWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>227</width>
+    <width>238</width>
     <height>416</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>238</width>
+    <height>0</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>238</width>
+    <height>16777215</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -33,6 +51,24 @@ along with YASW.  If not, see http://www.gnu.org/licenses/.
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QTableWidget" name="images">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>220</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>220</width>
+       <height>16777215</height>
+      </size>
+     </property>
      <property name="editTriggers">
       <set>QAbstractItemView::AnyKeyPressed</set>
      </property>
